yanl/examples/t1/correct/0402_if_if_else_else.yanl
program me;
var a:integer;
begin 
if true then 
    if true then 
       a:=2 
    else 
       a:=3
else a:=1
end.
