yanl/examples/t1/fail/0300_wrong_semicolon_in_if.yanl
program TestIfElse;
var
	a: integer;
begin
	if a > 0 then
		a := 0;
	else ;
end.
